# sqa-hw3

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: exceptions.py  models.py  reminders.py  tasks.py  users.py
tests/: conftest.py  test_reminders.py  test_tasks.py  test_users.py
