[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sqa-hw3"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.setuptools]
py-modules = ["models", "exceptions", "users", "tasks", "reminders"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
